# mesa

./: .coderabbit.yaml  .codespellignore  .coverage.animesh-HP-Pavilion-Gaming-Laptop-15-ec0xxx.19901.XXGyvLfx  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .py  .readthedocs.yml  .travis.yml  .vale.ini  CHANGES.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CWE list.csv  Dockerfile  GOVERNANCE.md  HISTORY.md  HISTORY.rst  JAK NA TO.txt  LICENSE  LICENSE.md  MANIFEST.in  NOTICE  Network Batch Runner.ipynb  PR_DESCRIPTION.md  Pipfile  README.md  README.rst  TESTVALE.md  WebCrawler.ipynb  _ true  benchmark_10k_agents.py  codecov.yaml  commit.txt  docker-compose.yml  features.csv  (+20 more)
.github/: FUNDING.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: asking-help.md  bug-report.md  config.yml  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md
.github/workflows/: benchmarks.yml  build_lint.yml  codespell.yml  examples.yml  paper.yml  pr_branch_message.yml  python.yml  release.yml  ui-viz-tests.yml  update-pipfile.yml  vale.yml  viz-tests.yml
.mypy_cache/3.6/: test_tornado.data.json  test_tornado.meta.json
.vale/: config.json
.venv312/: pyvenv.cfg
.venv312/Scripts/: Activate.ps1  activate  activate.bat
benchmarks/: README.md  backend_space_benchmark.py  backend_space_benchmark_matrix.py  compare_timings.py  configurations.py  global_benchmark.py  icon_sanity_checks.py  icons_benchmark.py
benchmarks/BoltzmannWealth/: __init__.py  boltzmann_wealth.py
benchmarks/Flocking/: Flocking.py  __init__.py  benchmark_flocking.py  boid.py  flocking.py
benchmarks/Schelling/: Schelling.py  __init__.py  benchmark_schelling.py  schelling.py
benchmarks/WolfSheep/: WolfSheep.py  __init__.py  agents.py  benchmark_wolfsheep.py  random_walk.py  wolf_sheep.py
binder/: environment.yml
docs/: GSoC.md  Makefile  README.md  VISUALIZATION_TESTING.md  adv_tutorial.rst  batchrunner.rst  best-practices.md  best-practices.rst  conf.py  datacollection.rst  example_template.txt  examples.md  examples_overview_template.txt  getting-started.rst  getting_started.md  howto.md  howto.rst  index.md  index.rst  init.rst  intro-tutorial.rst  intro_tutorial.rst  issue_954.rst  make.bat  mesa.md  mesa.rst  mesa.visualization.md  mesa.visualization.modules.md  mesa.visualization.modules.rst  mesa.visualization.rst  mesa.visualization_old.md  mesa.visualization_old.modules.md  mesa_extension.md  migration_guide.md  modular-visualization.md  modular-visualization.rst  overview.md  overview.rst  package_main.rst  packages.md  (+3 more)
docs/Useful-snippets/: snippets.rst
docs/_static/: switcher.json
docs/apis/: Bilateral_Shapley.rst  agent.md  api_main.md  api_main.rst  batchrunner.md  batchrunner.rst  datacollection.md  datacollection.rst  discrete_space.md  experimental.md  init.md  init.rst  mesa_logging.md  model.md  space.md  space.rst  time.md  time.rst  visualization.md  visualization.rst
docs/examples/: boid_flockers.md  boltzmann_wealth_model.md  conways_game_of_life.md  schelling.md  virus_on_network.md
docs/tutorials/: 0_first_model.ipynb  10_comparing_scenarios.ipynb  1_adding_space.ipynb  2_collecting_data.ipynb  3_agentset.ipynb  4_visualization_basic.ipynb  5_visualization_dynamic_agents.ipynb  6_visualization_custom.ipynb  6_visualization_rendering_with_space_renderer.ipynb  7_batch_run.ipynb  7_visualization_custom.ipynb  7_visualization_propertylayer_visualization.ipynb  8_batch_run.ipynb  8_comparing_scenarios.ipynb  8_visualization_custom.ipynb  9_batch_run.ipynb  MoneyModel.py  adv_tutorial.ipynb  adv_tutorial.rst  adv_tutorial_experimental.ipynb  adv_tutorial_legacy.ipynb  agent_data.csv  getting_started.md  intro_tutorial.ipynb  intro_tutorial.rst  model_data.csv  visualization_tutorial.ipynb
docs/useful-snippets/: snippets.rst  tmp.py
examples/: Readme.md  Schelling.py  __init__.py  cesta k souboru pro import.txt  cesta.py
examples/.ipynb_checkpoints/: Econophysics Wealth Model-checkpoint.ipynb
examples/Basic/: Readme.md  run.py  shapes_model.py  shapes_run.py
examples/Boltzmann_Wealth_Model/: MoneyModel.py  Readme.md  Viz_MoneyModel.py
examples/ColorPatches/: Readme.md  color_cell.py  color_patch_model.py  color_patches.py  run.py
examples/ConwaysGameOfLife/: Readme.md  cgol_cell.py  cgol_main.py  cgol_model.py
examples/EpsteinCivilViolence/: Epstein Civil Violence.ipynb  EpsteinCivilViolence.py  EpsteinCivilViolenceServer.py  Readme.md
examples/Flockers/: Flocker Test.ipynb  Flocker_Server.py  Readme.md  SimpleContinuousModule.py  flockers.py  run3D.py
examples/ForestFire/: Forest Fire Model.ipynb  ForestFire.py  ForestFireVisualization.py  (+2 more)
maintenance/: fetch_unlabeled_prs.py
mesa/: BilateralShapley.py  EvoAgent.py  EvoModel.py  ReproductionModel.py  SelectionModel.py  __init__.py  agent.py  batchrunner.py  cacheable_model.py  cacheable_wrapper_example.ipynb  datacollection.py  datacollection_with_caching.py  example.ipynb  examples.py  gridspace.py  main.py  mesa_logging.py  model.py  model_share.py  rng.py  schelling.py  signal.py  space.pxd  space.py  space.pyx  system_state.py  time.py  util.py
notes/: README.md
paper/: paper.bib  paper.md
tests/: VISUALIZATION_TESTING.md  __init__.py  conftest.py  read_requirements.py  run_viz_tests.sh  test_EvoAgent.py  test_EvoModel.py  test_JSON.py  test_ReproductionModel.py  test_SelectionModel.py  test_agent.py  test_agent_spatial_methods.py  test_backends.py  test_batch_run.py  test_batchrunner.py  test_batchrunnerMP.py  test_canned_models.py  test_cell_space.py  test_components_matplotlib.py  test_connection.py  test_continuous_observables.py  test_continuous_space.py  test_datacollector.py  test_devs.py  test_discrete_space.py  test_end_to_end_viz.sh  test_examples.py  test_examples_viz.py  test_grid.py  test_icon_cache.py  test_icons.py  test_import_namespace.py  test_iteration_fix.py  test_jupyter_viz.py  test_lifespan.py  test_main.py  test_mesa_logging.py  test_mesa_signals.py  test_meta_agents.py  test_model.py  (+20 more)
(+825 files in other folders)
